--- a/ideaForge/Pages/DashboardPages/IFDockPage.xaml
+++ b/ideaForge/Pages/DashboardPages/IFDockPage.xaml
@@ -222,32 +222,38 @@
                    Width="300"
                   Height="200"
                   Background="#FFFFFF">
-            <Grid >
+
+            <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
+<!-- creating rows in row 0-->
                 <Grid Grid.Row="0">
+
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
-                        
                     </Grid.RowDefinitions>
+
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="3*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
+                    <!-- working 1 on the Row 0 and Row 1 for the Column 0-->
                     <Label 
                     FontFamily="Segoe UI"
                     FontWeight="SemiBold"
                     Grid.Row="0" Grid.Column="0"
-                    Content="Serviceable Area" />
+                    Content="Serviceable Area" 
+                        />
                     <TextBox
                          Margin="15,0,0,0"
                         Grid.Row="1" Grid.Column="0"
                         />
+                    <!-- working 2 on the Row 0 and Row 1 for the Column 1-->
                     <Label 
                     FontFamily="Segoe UI"
                     FontWeight="SemiBold"
@@ -256,50 +262,58 @@
                     <mah:ToggleSwitch
                         Grid.Row="1" Grid.Column="1"
                         Background="#A9ABB1"  />
-                    <StackPanel  Grid.Row="1" Orientation="Vertical">
-                        <Label
+                </Grid>
+                <!-- Row 0 Completed-->
+
+                <!-- Row 1 Started-->
+                <StackPanel  Grid.Row="1" Orientation="Vertical">
+                    <Label
                             HorizontalAlignment="Left"
                             Margin="15,0,0,0"
                              FontFamily="Segoe UI" 
                             FontWeight="SemiBold">
-                            <Label.Template>
-                                <ControlTemplate>
-                                    <TextBlock>
+                        <Label.Template>
+                            <ControlTemplate>
+                                <TextBlock>
                             <Run Text="Status Description"/>
                             <!--<Run Text="*" Foreground="red"/>-->
-                                    </TextBlock>
-                                </ControlTemplate>
-                            </Label.Template>
-                        </Label>
+                                </TextBlock>
+                            </ControlTemplate>
+                        </Label.Template>
+                    </Label>
 
-                        <Border BorderBrush="#A9ABB1" Margin="15,0,15,15" BorderThickness="1" CornerRadius="5">
-                            <dotNetKitControls:AutoCompleteComboBox
+                    <Border BorderBrush="#A9ABB1" Margin="15,0,15,15" BorderThickness="1" CornerRadius="5">
+                        <dotNetKitControls:AutoCompleteComboBox
     SelectedValuePath="city_Name"
                         DisplayMemberPath="city_Name"
     TextSearch.TextPath="city_Name"
     ItemsSource="{Binding CityList}"
      SelectedValue="{Binding RegisterModel.city}"                   
    />
-                        </Border>
-                        
-                    </StackPanel>
-                    <StackPanel  Grid.Row="2" Orientation="Vertical">
-                     
+                    </Border>
 
-                        <Border BorderBrush="#A9ABB1" Margin="15,0,15,15" BorderThickness="1" CornerRadius="5">
-      <RichTextBox  />
-                        </Border>
-                     
-                        <Grid Grid.Row="3">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Button 
+                </StackPanel>
+                <!-- Row 1 Completed-->
+
+                <!-- Row 2 Started-->
+                <StackPanel  Grid.Row="2" Orientation="Vertical">
+                    <Border Height="50" BorderBrush="#A9ABB1" Margin="15,0,15,15" BorderThickness="1" CornerRadius="5">
+                        <RichTextBox  />
+                    </Border>
+                </StackPanel>
+                <!-- Row 2 Completed-->
+
+                <!-- Row 3 Started-->
+                <Grid Grid.Row="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button 
             Grid.Column="1"
                 
             x:Name="Send" 
-            BorderThickness="1" Margin="10,0,10,0"
+            BorderThickness="1" Margin="10,5,15,5"
             BorderBrush="Black" 
                 Content="CONTINUE" 
             Foreground="White" 
@@ -307,21 +321,21 @@
 
 
 
-                                <Button.Resources>
-                                    <Style TargetType="{x:Type Button}">
-                                        <Style.Resources>
-                                            <Style TargetType="{x:Type Border}">
-                                                <Setter Property="CornerRadius" Value="5" />
-                                            </Style>
-                                        </Style.Resources>
+                        <Button.Resources>
+                            <Style TargetType="{x:Type Button}">
+                                <Style.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="5" />
                                     </Style>
-                                </Button.Resources>
-                            </Button>
-                            <Button 
+                                </Style.Resources>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <Button 
             Grid.Column="0"
                 
             
-            BorderThickness="1" Margin="10,0,10,0"
+            BorderThickness="1" Margin="15,5,10,5"
             BorderBrush="Black" 
                 Content="Cancel" 
             Foreground="White" 
@@ -329,21 +343,20 @@
 
 
 
-                                <Button.Resources>
-                                    <Style TargetType="{x:Type Button}">
-                                        <Style.Resources>
-                                            <Style TargetType="{x:Type Border}">
-                                                <Setter Property="CornerRadius" Value="5" />
-                                            </Style>
-                                        </Style.Resources>
+                        <Button.Resources>
+                            <Style TargetType="{x:Type Button}">
+                                <Style.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="5" />
                                     </Style>
-                                </Button.Resources>
-                            </Button>
-                        </Grid>
-                       
-                    </StackPanel>
+                                </Style.Resources>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <!-- Row 3 Completed-->
                 </Grid>
             </Grid>
+            
             <Border.Effect>
                 <DropShadowEffect Color="#00000017" BlurRadius="8" Opacity=".1"/>
             </Border.Effect>
@@ -351,11 +364,25 @@
         <Grid Grid.Row="1" Background="White">
             <DataGrid ItemsSource="{Binding Path=Albums}"
           AutoGenerateColumns="False">
+                <DataGrid.Resources>
+                    <Style TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="ContentTemplate">
+                            <Setter.Value>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding}" TextWrapping="Wrap"/>
+                                </DataTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </DataGrid.Resources>
                 <DataGrid.Columns>
-                    <DataGridCheckBoxColumn ElementStyle="{DynamicResource MetroDataGridCheckBox}"
-                            EditingElementStyle="{DynamicResource MetroDataGridCheckBox}"
-                            Header="IsSelected"
-                            Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Path=IsSelected, Mode=OneWay}" />
+
+                    <DataGridTextColumn Header="SR"/>
+                    <DataGridTextColumn Header="IF DOCK"/>
+                    <DataGridTextColumn Header="STATUS"/>
+                    <DataGridTextColumn Header="STATUS DESCRIPTION"/>
+                    <DataGridTextColumn Header="Action"/>
+
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
