--- a/ideaForge/Pages/DashboardPages/Requests.xaml
+++ b/ideaForge/Pages/DashboardPages/Requests.xaml
@@ -8,12 +8,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-
         <mah:MetroTabControl>
             <TabItem Header="Today's Requests" Background="#A9ABB1" Foreground="White">
                 <Grid Background="#FFF">
-                    <DataGrid ItemsSource="{Binding Path=Albums}"
-          AutoGenerateColumns="False">
+                    <DataGrid ItemsSource="{Binding Path=Albums}" AutoGenerateColumns="False" CanUserSortColumns="True">
                         <DataGrid.Resources>
                             <Style TargetType="{x:Type DataGridColumnHeader}">
                                 <Setter Property="ContentTemplate">
@@ -27,12 +25,12 @@
                         </DataGrid.Resources>
                         <DataGrid.Columns>
                           
-                            <DataGridTextColumn Header="Booking Id"/>
-                            <DataGridTextColumn Header="UserName &amp; Contact"/>
-                            <DataGridTextColumn Header="IF Dock"/>
-                            <DataGridTextColumn Header="Date &amp; Time Slot"/>
-                            <DataGridTextColumn Header="Status"/>
-                            <DataGridTextColumn Header="Action"/>
+                            <DataGridTextColumn  Header="Booking Id"/>
+                            <DataGridTextColumn  Header="UserName &amp; Contact"/>
+                            <DataGridTextColumn CanUserSort="True" Header="IF Dock"/>
+                            <DataGridTextColumn CanUserSort="True" Header="Date &amp; Time Slot"/>
+                            <DataGridTextColumn CanUserSort="True" Header="Status"/>
+                            <DataGridTextColumn CanUserSort="True" Header="Action"/>
                           
                         </DataGrid.Columns>
                     </DataGrid>
