--- a/ideaForge/App.xaml
+++ b/ideaForge/App.xaml
@@ -7,13 +7,16 @@
              mc:Ignorable="d"
               Startup="OnStartup">
     <Application.Resources>
+        <!--<Color x:Key="HighlightColor">#FF9F0055</Color>
+
+        <Color x:Key="AccentBaseColor">#FFD80073</Color>-->
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                  <!--MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive!--> 
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                  <!--Theme setting--> 
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Green.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
