DashBoard Progress Bar colour Edited

--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -234,7 +234,7 @@
 
                 <mah:ProgressRing
                     IsActive="{Binding IsBusy}" 
-                    Foreground="Red" 
+                    Foreground="#91C84F" 
                     Grid.Column="1"
                     Grid.Row="1"
                     />
