--- a/ideaForge/Pages/DashboardPages/IFDockPage.xaml
+++ b/ideaForge/Pages/DashboardPages/IFDockPage.xaml
@@ -219,8 +219,8 @@
                     Grid.Row="0"
                       HorizontalAlignment="Right"
             Margin="0,0,20,0"
-                   Width="300"
-                  Height="200"
+                   Width="350"
+                  Height="230"
                   Background="#FFFFFF">
 
             <Grid>
@@ -248,9 +248,10 @@
                     FontWeight="SemiBold"
                     Grid.Row="0" Grid.Column="0"
                     Content="Serviceable Area" 
+                    Margin="10,1,0,0"
                         />
                     <TextBox
-                         Margin="15,0,0,0"
+                         Margin="15,1,5,0"
                         Grid.Row="1" Grid.Column="0"
                         />
                     <!-- working 2 on the Row 0 and Row 1 for the Column 1-->
@@ -261,7 +262,9 @@
                     Content="Status" />
                     <mah:ToggleSwitch
                         Grid.Row="1" Grid.Column="1"
-                        Background="#A9ABB1"  />
+                        Background="#A9ABB1"
+                        Margin="0,0,0,0"
+                        />
                 </Grid>
                 <!-- Row 0 Completed-->
 
