--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -8,12 +8,13 @@
         xmlns:local="clr-namespace:ideaForge"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:vm="clr-namespace:ideaForge.ViewModels"
-                      
+            xmlns:pg="clr-namespace:ideaForge.Pages.DashboardPages"          
         mc:Ignorable="d"
                       xmlns:converters="clr-namespace:ideaForge.Converters"
       x:Name="loginWindow"
         Title="Dashboard" Height="620" Width="1000">
     <Controls:MetroWindow.DataContext>
+      
         <vm:DashboardViewModel/>
     </Controls:MetroWindow.DataContext>
     <Controls:MetroWindow.Resources>
@@ -225,6 +226,28 @@
                        FontWeight="SemiBold"
                                    
                        Content="{Binding PageName,Mode=TwoWay}" />
+                        <Border
+                            Visibility="Hidden"
+                            x:Name="statusBorder"
+                            x:FieldModifier="public"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            CornerRadius="6" Background="#DEECFF" 
+                            BorderBrush="#3398D8"
+                            BorderThickness="1"
+                            >
+                            <Grid >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="3*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Image Source="/Images/CompleteRideIcon.png" Grid.Column="0" Height="10" Margin="5"/>
+                                <Label Content="Completed" Foreground="#3398D8" Grid.Column="1"/>
+
+                            </Grid>
+
+                        </Border>
                         <StackPanel
                               VerticalAlignment="Center"
                             HorizontalAlignment="Right"
