Changes for Profile and Accepted and Rejected work

--- a/ideaForge/Pages/DashboardPages/Requests.xaml
+++ b/ideaForge/Pages/DashboardPages/Requests.xaml
@@ -95,7 +95,7 @@
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
-                                            <Button BorderBrush="Transparent" BorderThickness="0">
+                                            <Button BorderBrush="Transparent" BorderThickness="0" Command="{Binding AcceptedCommand}" CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Source="/Images/acceptIcon.png" />
                                                     <TextBlock Margin="5,0">Accept</TextBlock>
