--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -192,13 +192,13 @@
                                     Width="30" Height="30" 
                                     BorderThickness="1">
                                  
-                                    <Image Source="/Images/profile.png"></Image>
+                                    <Image Source="{Binding ProfileImage}"></Image>
                                     
                                 </Border>
                             
                             <Label 
                                 VerticalAlignment="Center" 
-                                Content="Jordan H" 
+                                Content="{Binding UserName}" 
                                 Margin="5"
                                 FontWeight="SemiBold"
                                 FontSize="15"
