--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -192,13 +192,13 @@
                                     Width="30" Height="30" 
                                     BorderThickness="1">
                                  
-                                    <Image Source="{Binding ProfileImage}"></Image>
+                                    <Image Source="{Binding Path=DataContext.ProfileImage}"></Image>
                                     
                                 </Border>
                             
                             <Label 
                                 VerticalAlignment="Center" 
-                                Content="{Binding UserName}" 
+                                Content="{Binding Path=DataContext.UserName}" 
                                 Margin="5"
                                 FontWeight="SemiBold"
                                 FontSize="15"
