--- a/ideaForge/Pages/DashboardPages/Requests.xaml
+++ b/ideaForge/Pages/DashboardPages/Requests.xaml
@@ -210,7 +210,11 @@
                                                     <TextBlock Margin="5,0">Accept</TextBlock>
                                                 </StackPanel>
                                             </Button>
-                                            <Button BorderBrush="Transparent" BorderThickness="0">
+                                            <Button BorderBrush="Transparent" BorderThickness="0"
+                                                     Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Path=DataContext.RejectedCommand,UpdateSourceTrigger=PropertyChanged}"
+                                                    CommandParameter="{Binding .}"
+                                                   
+                                                    >
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Source="/Images/rejectIcon.png" />
                                                     <TextBlock Margin="5,0">Reject</TextBlock>
